Add some file endpoints
