# kiota/models/package_move_request.go
@@ -1,0 +1,80 @@
+package models
+
+import (
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91 "github.com/microsoft/kiota-abstractions-go/serialization"
+)
+
+type PackageMoveRequest struct {
+    // Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+    additionalData map[string]any
+    // The location_uuid property
+    location_uuid *string
+}
+// NewPackageMoveRequest instantiates a new PackageMoveRequest and sets the default values.
+func NewPackageMoveRequest()(*PackageMoveRequest) {
+    m := &PackageMoveRequest{
+    }
+    m.SetAdditionalData(make(map[string]any))
+    return m
+}
+// CreatePackageMoveRequestFromDiscriminatorValue creates a new instance of the appropriate class based on discriminator value
+// returns a Parsable when successful
+func CreatePackageMoveRequestFromDiscriminatorValue(parseNode i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.Parsable, error) {
+    return NewPackageMoveRequest(), nil
+}
+// GetAdditionalData gets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+// returns a map[string]any when successful
+func (m *PackageMoveRequest) GetAdditionalData()(map[string]any) {
+    return m.additionalData
+}
+// GetFieldDeserializers the deserialization information for the current model
+// returns a map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error) when successful
+func (m *PackageMoveRequest) GetFieldDeserializers()(map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error)) {
+    res := make(map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error))
+    res["location_uuid"] = func (n i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode) error {
+        val, err := n.GetStringValue()
+        if err != nil {
+            return err
+        }
+        if val != nil {
+            m.SetLocationUuid(val)
+        }
+        return nil
+    }
+    return res
+}
+// GetLocationUuid gets the location_uuid property value. The location_uuid property
+// returns a *string when successful
+func (m *PackageMoveRequest) GetLocationUuid()(*string) {
+    return m.location_uuid
+}
+// Serialize serializes information the current object
+func (m *PackageMoveRequest) Serialize(writer i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.SerializationWriter)(error) {
+    {
+        err := writer.WriteStringValue("location_uuid", m.GetLocationUuid())
+        if err != nil {
+            return err
+        }
+    }
+    {
+        err := writer.WriteAdditionalData(m.GetAdditionalData())
+        if err != nil {
+            return err
+        }
+    }
+    return nil
+}
+// SetAdditionalData sets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+func (m *PackageMoveRequest) SetAdditionalData(value map[string]any)() {
+    m.additionalData = value
+}
+// SetLocationUuid sets the location_uuid property value. The location_uuid property
+func (m *PackageMoveRequest) SetLocationUuid(value *string)() {
+    m.location_uuid = value
+}
+type PackageMoveRequestable interface {
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.AdditionalDataHolder
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.Parsable
+    GetLocationUuid()(*string)
+    SetLocationUuid(value *string)()
+}
